updated portfolio to deployment

--- a/Web_Portfolio/templates/index.html
+++ b/Web_Portfolio/templates/index.html
@@ -114,7 +114,7 @@
                 </div>
             </a>
             <a href="https://github.com/GreggIsGreat/Mavrick" class="portfolio-box">
-                <img src="{% static 'images/port1.png' %}" alt="Project 3">
+                <img src="{% static 'images/maverickimg.png' %}" alt="Project 3">
                 <div class="portfolio-layer">
                     <h4>Maverick Trading App</h4>
                 </div>
